--- a/logout/logout.html
+++ b/logout/logout.html
@@ -11,6 +11,8 @@
     </div>
     <section class="fondo">
       <img id="imageDer" src="Captura22.svg"/>
+      <section class="backgroundForm">
+        </section>
         <section class="logout">
             <form action="/action_page.php">
                 Nombre:<br><br>
@@ -42,7 +44,7 @@
                 <br><br>
                 <input type="submit" value="Registrarse">
             </form>
-        </section>
+      </section>
     </section>
   </body>
 </html>
